// Original file: src/proto/kobeni.proto


export interface User {
  'id'?: (string);
  'email'?: (string);
  'username'?: (string);
  'password'?: (string);
  'taxId'?: (string);
  'createdBy'?: (string);
  'createdAt'?: (string);
  'updatedBy'?: (string);
  'updatedAt'?: (string);
  'deletedBy'?: (string);
  'deletedAt'?: (string);
}

export interface User__Output {
  'id'?: (string);
  'email'?: (string);
  'username'?: (string);
  'password'?: (string);
  'taxId'?: (string);
  'createdBy'?: (string);
  'createdAt'?: (string);
  'updatedBy'?: (string);
  'updatedAt'?: (string);
  'deletedBy'?: (string);
  'deletedAt'?: (string);
}
